--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
+cairocffi==1.2.0
+CairoSVG==2.5.2
+cffi==1.14.5
+cssselect2==0.4.1
+defusedxml==0.7.1
 Django==2.2
+html5lib==1.1
+inflect==5.3.0
+Pillow==8.3.0
+pycparser==2.20
+pyphen==0.11.0
 pytz==2021.1
+qrcode==6.1
+six==1.16.0
 sqlparse==0.4.1
+tinycss2==1.1.0
+WeasyPrint==52.5
+webencodings==0.5.1
